samples/_failures_safe/1761220264_f8323d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_26694044.c: In function ‘main’:
./samples/SAFE/__tmp_26694044.c:154:39: error: ‘MAX_D’ undeclared (first use in this function); did you mean ‘MAX_DIM’?
  154 |     mat1.rows = read_int("Rows: ", 1, MAX_D
      |                                       ^~~~~
      |                                       MAX_DIM
./samples/SAFE/__tmp_26694044.c:154:39: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_26694044.c:154:44: error: expected ‘)’ at end of input
  154 |     mat1.rows = read_int("Rows: ", 1, MAX_D
      |                         ~                  ^
      |                                            )
./samples/SAFE/__tmp_26694044.c:154:5: error: expected declaration or statement at end of input
  154 |     mat1.rows = read_int("Rows: ", 1, MAX_D
      |     ^~~~
